# zepiris

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  docker-compose.yml  ml_inference.Dockerfile  poetry.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-build.yml
docs/: API_REFERENCE.md  CONFIGURATION.md  LOCAL_SETUP_AND_TEST.md  ML_INFERENCE_SERVICE.md  ML_INFERENCE_STRUCTURE.md  QUICK_START.md
scripts/: test_ml_service.py  test_models.py
tests/: test_config.py  test_exceptions.py  test_health.py
zepiris/: __init__.py  config.py  deps.py  exception_handlers.py  exceptions.py  main.py  version.py
zepiris/api/routes/: __init__.py  face.py  health.py
zepiris/ml_inference/: __init__.py  app.py  base.py  blur_detection.py  deps.py  face_embedding.py  image_quality_assessment.py  model_loading.py  nsfw_detection.py  routes.py  spoof_detection.py
zepiris/ml_inference/models/: __init__.py  blur.py  spoof.py
zepiris/schemas/: __init__.py  face.py  ml_inference.py
zepiris/services/: __init__.py  embedding.py  iqa.py  milvus_store.py  minio_storage.py  ml_client.py
