[project]
name = "zepiris"
version = "1.0.0"
description = "ZepIris: open-source face embedding, vector search, and image quality check microservice"
authors = [
    {name = "Sarthak Agarwal", email = "sarthak.agarwal@zepto.com"},
    {name = "Abhirath Joshi", email = "abhirath.joshi@zepto.com"},
    {name = "Naman Swarnkar", email = "naman.swarnkar@zepto.com"},
    {name = "Amish Agrawal", email = "amish.agrawal@zepto.com"}
]
maintainers = [
  {name = "Abhirath Joshi", email = "abhirath.joshi@zepto.com"},
  {name = "Sarthak Agarwal", email = "sarthak.agarwal@zepto.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.127.0,<0.200.0)",
    "starlette (>=0.49.1,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<0.33.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "python-multipart (>=0.0.26,<0.1.0)",
    "minio (>=7.2.0,<8.0.0)",
    "pymilvus (>=2.4.0,<3.0.0)",
    "opencv-python-headless (>=4.10.0,<5.0.0)",
    "numpy (>=1.26.0,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "huggingface-hub (>=0.16.0,<1.0.0)",
    "httpx (>=0.24.0,<1.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
    "idna (>=3.15.0,<4.0.0)",
]

[project.optional-dependencies]
ml = [
    "torch (>=2.2.0)",
    "torchvision (>=0.17.0)",
    "insightface (>=0.7.3,<0.8.0)",
    "onnx (>=1.14.0,<1.22.0)",
    "onnxruntime (>=1.17.0)",
]

[project.scripts]
zepiris-api = "zepiris.main:run"
zepiris-ml-inference-api = "zepiris.ml_inference.app:run"

[tool.poetry]
package-mode = true
packages = [{ include = "zepiris" }]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
torch = {version = ">=2.2.0", optional = true, source = "pytorch-cpu"}
torchvision = {version = ">=0.17.0", optional = true, source = "pytorch-cpu"}

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.0.0"
pytest = ">=8.0.0"
ruff = ">=0.8.0"
mypy = ">=1.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["zepiris", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = [
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["zepiris"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
